# nrg

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Makefile  README.md  build.sh
.github/: renovate.json
.github/workflows/: docker-build.yml  docker-publish.yml  renovate.yml  validate.yml
crates/id-core/: Cargo.toml
crates/id-core/src/: lib.rs
crates/server/: Cargo.toml  build.rs
crates/server/src/: main.rs
frontend/: index.html
frontend/pkg/: id_core.d.ts  id_core.js  id_core_bg.wasm  id_core_bg.wasm.d.ts  package.json
