[package]
name = "id-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
wasm = ["wasm-bindgen", "getrandom/js"]

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }
getrandom = { version = "0.2", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
